# qsm-forward

./: .gitignore  MANIFEST.in  README.md  label.json  main.py  pyproject.toml  qsm_forward.py  release.sh  setup-env.sh  setup.py  visualisation.py
docs/: .buildinfo  conf.py  index.md  objects.inv  py-modindex.html  qsm_forward.md  search.html  searchindex.js
docs-build/: conf.py
docs-built/markdown/: qsm_forward.md
docs/_build/doctrees/: environment.pickle  index.doctree  qsm_forward.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  qsm_forward.html  searchindex.js
docs/_build/html/_sources/: qsm_forward.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_sources/: index.rst.txt
qsm_forward/: __init__.py  main.py  qsm_forward.py  visualisation.py
qsm_forward/examples/: bids_generation.py  head-phantom-maps  head_phantom_maps.py  main.py  simulated_phantom.py  simulated_sources.py  simulated_sources_oblique.py
