[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qsm-forward"
version = "0.14"
authors = [
  { name="Ashley Stewart", email="a.stewart.au@gmail.com" },
]
description = "A forward-model simulation for Quantitative Susceptibility Mapping"
readme = "README.md"
requires-python = ">=3.8"
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
]

[project.urls]
"Homepage" = "https://github.com/astewartau/qsm-forward-model"
"Bug Tracker" = "https://github.com/astewartau/qsm-forward-model/issues"

[options.entry_points]
console_scripts = [
  "my-command = qsm_forward.main:main",
]